// Copyright 2017 Intel Corporation
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// -----------------------------------------------------------------------------


syntax = "proto3";


message ProposeAddTaskOwner {

    string proposal_id = 1;

    string task_id = 2;

    string next_id = 3;

    string reason = 4;

    string metadata = 5;

}


message ProposeAddTaskAdmin {

    string proposal_id = 1;

    string task_id = 2;

    string next_id = 3;

    string reason = 4;

    string metadata = 5;

}


message CreateTask {

    string task_id = 1;

    string name = 2;

    repeated string admins = 3;

    repeated string owners = 4;

    string metadata = 5;

}
